# camelup_sim-mirror

./: Cargo.toml  README.md  tags  todo.md
.github/workflows/: Release.yml  rust.yml
calc/: Cargo.toml  profiling.md
calc/benches/: simulation_bench.rs
calc/src/: camel_map.rs  camel_stack.rs  color.rs  color_state.rs  configuration.rs  lib.rs  main.rs  simulation.rs
calc/tests/: camel_map_tests.rs  color_state_tests.rs  configuration_tests.rs  effect_card_tests.rs  normalize_tests.rs  simulation_tests.rs
camel_tui/: Cargo.toml  arrow_left.xcf  arrow_right.xcf  camel1.xcf  colors.py
camel_tui/src/: camelfield.rs  gameasset.rs  gamefield.rs  gamestate.rs  logger.rs  main.rs  movehistory.rs  numbersfield.rs  playererrors.rs  selection.rs
src/: main.rs
