[package]
name = "camelup_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
calc = { path = "../calc/" }

ratatui = "0.29.0"
crossterm = "0.29.0"
palette = "0.7.6"
simplelog = "0.12.2"
log = "0.4.29"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
